# Reactor

./: CMakeLists.txt  capacitor.geo  poisson.cc  reactor.blend  run.sh  show_solution.py
src/: assembly_predicates.h  main.cc  poisson.h  poisson_local_assembly.h
src/assembly/: assembly_predicates.h  poisson.cc  poisson.h  poisson_local_assembly.h  timer.h
src/mesh/: mesh.h  mesh_processor.h
